--- a/styles.css
+++ b/styles.css
@@ -261,3 +261,138 @@ a {
     cursor: pointer;
     margin-bottom: 1rem;
 }
+
+@media (max-width: 768px) {
+    .header-container {
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+        padding: 1rem;
+        padding-bottom: -5rem;
+    }
+
+    .header-content {
+        width: 100%;
+        margin: 0;
+        text-align: center;
+    }
+
+    .header-title {
+        font-size: 3rem;
+    }
+
+    .header-function {
+        font-size: 1.2rem;
+    }
+
+    .header-text {
+        font-size: 1rem;
+    }
+
+    .header-buttons button {
+        font-size: 1.2rem;
+        padding: 0.5rem;
+    }
+
+    .header-buttons .no-border {
+        font-size: 1.5rem;
+    }
+
+    .header-image {
+        width: 80%;
+        margin-top: 2rem;
+    }
+
+    .especializations-container {
+        width: 90%;
+        padding: 2rem;
+    }
+
+    .projects-container {
+        padding: 5rem;
+    }
+
+    .projects-title {
+        font-size: 1.5rem;
+        margin-top: 5rem;
+    }
+
+    .project {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 5rem;
+    }
+
+    .project-img img {
+        width: 100%;
+        margin-right: 0;
+    }
+
+    .project-text h3 {
+        font-size: 1.5rem;
+    }
+
+    .project-text p {
+        font-size: 1rem;
+    }
+
+    .contact-content {
+        width: 90%;
+    }
+
+    .contact-label {
+        font-size: 1.5rem;
+    }
+
+    .contact-button {
+        font-size: 1rem;
+    }
+
+    .project-buttons {
+        font-size: 1rem;
+    }
+
+}
+
+@media (max-width: 480px) {
+    .header-container {
+        padding-bottom: 2rem;
+    }
+    .header-title {
+        font-size: 2.5rem;
+    }
+
+    .header-function {
+        font-size: 1.1rem;
+    }
+
+    .header-text {
+        font-size: 0.9rem;
+    }
+
+    .header-buttons button {
+        font-size: 1rem;
+        padding: 0.4rem;
+    }
+
+    .header-buttons .no-border {
+        font-size: 1.3rem;
+    }
+
+    .especializations-container {
+        margin-bottom: 0;
+    }
+
+    .especializations-content {
+        font-size: 1rem;
+    }
+
+    .projects-title {
+        font-size: 1.2rem;
+        margin-top: 5rem;
+    }
+
+    .project-text p {
+        font-size: 0.9rem;
+    }
+}
